Fixed overflowed focus ring

--- a/web/css/layout/_layered-navigation.less
+++ b/web/css/layout/_layered-navigation.less
@@ -235,7 +235,7 @@
         .block.filter {
             .filter-title {
                 border: 0;
-                padding: @2 0;
+                .padding(@2 @1 @2 0);
                 cursor: pointer;
                 display: flex;
                 align-items: center;
